--- a/ArtWars/artWars.Web/Views/Login/Index.cshtml
+++ b/ArtWars/artWars.Web/Views/Login/Index.cshtml
@@ -1,21 +1,18 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout_Blank.cshtml";
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Sign In";
 }
 
 @using System.Web.Optimization
 @model artWars.Web.Models.UserLogin
 
-<div class="container-center animated slideInDown">
-    <div class="view-header">
+<div class="container-fluid animated slideInDown col-lg-3 p-5">
+    <div class="view-header text-center">
         <div class="header-icon">
             <i class="pe page-header-icon pe-7s-unlock"></i>
         </div>
-        <div class="header-title">
-            <h3>Login</h3>
-            <small>
-                Enter your Username and Password.
-            </small>
+        <div class="header-title text-lg-center">
+            <h3>Sign In</h3>
         </div>
     </div>
 
@@ -29,9 +26,6 @@
                         @Html.LabelFor(m => m.Username, new { @class = "control-label" })
                         @Html.TextBoxFor(m => m.Username, new
 				   {
-					   placeholder = "example@gmail.com",
-					   title = "Please enter you username",
-					   value = "",
 					   name = "username",
 					   id = "username",
 					   @class = "form-control"
@@ -43,17 +37,17 @@
                    {
                        @class = "form-control",
                        type = "password",
-                       title = "Please enter your password",
-                       placeholder = "******",
-                       value = "",
                        name = "password",
                        id = "password"
                    })
                     </div>
-                    <div>
-                        <button class="btn btn-accent">Login</button>
-                        <a class="btn btn-default" href="#">Register</a>
+                    <div class="text-center">
+                        <button class="btn btn-dark">Sign In</button>
                     </div>
+					<div class="p-3 text-center">
+						<a class="btn bg-light float-left" style="cursor: pointer" onclick="location.href='@Url.Action("Register", "Login")'">Sign Up</a>
+						<a class="btn float-right" href="#">Forgot Password?</a>
+					</div>
             }
         </div>
     </div>
@@ -61,10 +55,7 @@
 </div>
 
 
-
 @section Scripts {
-    @Scripts.Render("~/bundles/validation/js")
-
     <script type="text/javascript">
         $(function () {
 
@@ -89,7 +80,5 @@
                 errorElement: "span"
             });
         });
-
-
     </script>
 }
