--- a/ArtWars/artWars.Web/Views/Shared/_Header.cshtml
+++ b/ArtWars/artWars.Web/Views/Shared/_Header.cshtml
@@ -1,28 +1,36 @@
-﻿<div class="container-fluid">
+﻿<nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top bg-light">
+	<div class="container-fluid">
 
-    <a class="navbar-brand" style="cursor: pointer" onclick="location.href='@Url.Action("Index", "Home")'">ArtWars</a>
-    <button class="navbar-toggler hidden-lg-up pull-right" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" style="">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+		<button class="btn btn-outline-dark" style="cursor: pointer" onclick="location.href='@Url.Action("Index", "Home")'">ArtWars</button>
+		<button class="navbar-toggler hidden-lg-up pull-right" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" style="">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-    <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="nav navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Wars", "Home")'">Wars</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Postbellum", "Home")'">Postbellum</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("About", "Home")'">About</a>
-            </li>
-        </ul>
-        
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-user"></span> Sign Up</a></li>
+		<div class="collapse navbar-collapse dropdown" id="navbar1">
+			<ul class="nav navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Wars", "Home")'">Wars</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Postbellum", "Home")'">Postbellum</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("About", "Home")'">About</a>
+				</li>
+			</ul>
 
-            <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-sign-in"></span> Login</a></li>
-        </ul>
-    </div>
+			<ul class="nav navbar-nav navbar-right">
+				<li class="nav-item">
+					<a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Register", "Login")'">
+						<span class="fa fa-user"></span> Sign Up</a>
+				</li>
 
-</div>
+				<li class="nav-item">
+					<a class="nav-link" style="cursor: pointer" onclick="location.href='@Url.Action("Index", "Login")'">
+						<span class="fa fa-sign-in"></span> Login</a>
+				</li>
+			</ul>
+		</div>
+
+	</div>
+</nav>
